--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
       - name: checkout code
-        if: ${{github.ref == 'ref/heads/master'}}
+        if: ${{github.ref == 'refs/heads/master'}}
         uses: actions/checkout@v2
         
         
