--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Step that can be failed
         env:
           FAIL_STEP: ${{ github.event.inputs.failstep == 'yes' }}
-        run:
+        run: |
           echo "This statement runs whether step exits 0 or 1"
           if [[ $FAIL_STEP == true ]]
           then
